fix : 날짜, 시간 자료형 변경