@@ -6,9 +6,10 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import roomescape.domain.dto.ReservationDto;
 import roomescape.domain.entity.Reservation;
 
+import java.time.LocalDate;
+import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 public class ReservationController {
@@ -16,9 +17,9 @@ public class ReservationController {
 
     public ReservationController() {
         this.reservations = new ArrayList<>();
-        reservations.add(new Reservation(1L, "브라운", "2023-01-01", "10:00"));
-        reservations.add(new Reservation(2L, "브라운", "2023-01-02", "11:00"));
-        reservations.add(new Reservation(3L, "브라운", "2023-01-03", "12:00"));
+        reservations.add(new Reservation(1L, "브라운", LocalDate.of(2023, 1, 1), LocalTime.of(10, 0)));
+        reservations.add(new Reservation(2L, "브라운", LocalDate.of(2023, 1, 2), LocalTime.of(11, 0)));
+        reservations.add(new Reservation(3L, "브라운", LocalDate.of(2023, 1, 3), LocalTime.of(12, 0)));
     }
 
     @GetMapping("/reservation")
@@ -31,6 +32,6 @@ public class ReservationController {
     public List<ReservationDto> getReservations() {
         return reservations.stream()
                 .map(ReservationDto::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
